<resources>
    <string name="app_name">ApiTest</string>
    <string name="card_number">Enter Card Number Here</string>
    <string name="fetch_card_details">Fetch Card Details</string>
    <string name="card_number_empty">Card Number Cannot be Empty</string>
    <string name="card_number_length_error">Card number length must be between 6 – 9 numbers</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="label_scheme">Scheme:</string>
    <string name="label_card_type">Card Type:</string>
    <string name="label_bank_name">Bank Name:</string>
    <string name="label_country_name">Country:</string>
    <string name="label_is_prepaid">Prepaid/PostPaid: </string>
    <string name="label_card_number_length">Card Number Length: </string>
    <string name="loading">Loading</string>
</resources>